TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")

2008-09-09 MickeM
 * Fixed issue with & and some commands via check_nt.
 * Fixed a crash on exit (which I added in Rc1).
 * Added 10 "bytes" the CPU buffer: (#174)
 + Added new option to [EventLog] section buffer_size to change the size of the buffer used when scanning the evenlotg (defaults to 64k).
 * Fixed error handling in CHeckEventLog so errors are repoorted properly (#184)

2008-09-08 MickeM
 * Fixed issue in windows 2008 with system tray (shared_session).
 * Fixed installer issue (should run (i hope) service installer on install now on 64 bit os)
 * Fixed issue with unloading plugins and log (causing "timeouts" when exiting some times)

2008-09-07 MickeM
 + Added sample powershell script as well as a workaround for making them run.
 * Fixed an issue making powershell scripts (and possibly others) not timeout properly.
 + Added upgrade support to the installer (still need to add support for keeping .ini file so be ware)

2008-09-06 MickeM
 * Improved error reporting in the eventlogchecker
 * *BREAKING CHANGE* filter=new is now the default so unless you use the new filtering you need to specify filter=old instead!
   I Recomend everyone to stop using the "old" filtering.

2008-09-04 MickeM
 * Fixed issues with new service stuff on NT4 and W2K (should work fine now)
 + Added some DebugOutput to service handling features so if you experience tropubel try using sysinternals DebugView too se logging before the agent startes.
 * Fixed a memory leak in the error formating code

2008-08-24 MickeM
 * Changed NSCA "general problem" error message to be more descriptive.
 * Fixed issue with CheckCPU not returning a valid performance unit (%) see issue #219 for details.

2008-08-16 MickeM