@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,4,23
-#define PRODUCTVER     0,3,4,23
-#define STRFILEVER     _T("0.3.4.23")
-#define STRPRODUCTVER  _T("0.3.4.23")
+#define FILEVER        0,3,4,24
+#define PRODUCTVER     0,3,4,24
+#define STRFILEVER     _T("0.3.4.24")
+#define STRPRODUCTVER  _T("0.3.4.24")
 #define STRPRODUCTDATE  _T("2008-09-09")
 #endif // AUTOBUILD_H
