@@ -250,6 +250,19 @@ namespace strEx {
 		ss << i;
 		return ss.str();
 	}
+	inline std::wstring itos_non_sci(double i) {
+		std::wstringstream ss;
+		if (i < 10)
+			ss.precision(20);
+		ss << std::noshowpoint << std::fixed << i;
+		std::wstring s = ss.str();
+		std::wstring::size_type pos = s.find_last_not_of('0');
+		if (pos == std::wstring::npos)
+			return s;
+		if (s[pos] != '.')
+			pos++;
+		return s.substr(0, pos);
+	}
 	inline std::wstring itos(float i) {
 		std::wstringstream ss;
 		ss << i;
